# sep

./: .gitignore  Cargo.toml
.cargo/: config.toml
debug/: extract_latency.py  lib.jq  note.sh  openSpans.ts  package-lock.json  package.json  tsconfig.json
scripts/: install_client.sh  install_server.sh  launcher.ps1  launcher.sh  test-verbose.sh  use_swap.sh  vultr_install.sh
scripts/vultr/: delete.sh  deploy.sh  ensure_server_exists.sh  instance_create.sh  instance_delete.sh  instance_list.sh  lib.sh  list_regions.sh  list_ssh_keys.sh  local.sh  log_copy.sh  plan_list.sh  speed_test.sh  ssh.sh  wait_for_instance_to_be_ready.sh
service/: sep-client.service  sep-server.service
src/: client.rs  quick_test.rs  server.rs
src/lib/: assignment.rs  async_channel_ext.rs  client_conn_group.rs  client_main_task.rs  decode.rs  dispatch_with_max_concurrency.rs  future_ext.rs  global_cmd_manager.rs  global_msg_manager.rs  handover.rs  lib.rs  message_dispatch.rs  never.rs  oneshot_with_ack.rs  protocol_conn_lifetime.rs  protocol_conn_lifetime_new.rs  recyle.rs  sequence.rs  sequenced_to_stream.rs  server_main_task.rs  sink_ext.rs  socks5.rs  stream_to_sequenced.rs  task_scope.rs
src/lib/client/: assignment.rs  client_msg_dispatch.rs  conn_host.rs  conn_manager.rs  global_message_sender.rs  main_task.rs  mod.rs  proxyee_io.rs  server_connection_lifetime.rs  server_connection_manager.rs  server_connector.rs  session_host.rs  session_manager.rs
src/lib/client_main_task/: server_connection_lifetime.rs  server_connection_lifetime_new.rs  server_connection_manager.rs  session_manager.rs
src/lib/connect_target/: mod.rs
src/lib/encrypt/: mod.rs
src/lib/protocol/: client_agent.rs  mod.rs  msg.rs  server_agent.rs
tests/: common.rs  greeting.rs  messaging.rs  requesting.rs
(+34 files in other folders)
