[package]
name = "sep"
version = "0.1.0"
edition = "2024"

[lib]
name = "sep_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "quick_test"
path = "src/quick_test.rs"

[dependencies]
bytes = "1.10.1"
chacha20 = "0.9.1"
futures = "0.3.31"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full", "test-util"] }

