[package]
name = "sep"
version = "0.1.0"
edition = "2024"

[lib]
name = "sep_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "quick_test"
path = "src/quick_test.rs"

[dependencies]
bytes = { version = "1.10.1", features = ["std"] }
chacha20 = "0.9.1"
derive_more = { version = "2.0.1", features = ["from"] }
futures = "0.3.31"
rand = "0.9.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full", "test-util"] }

