[package]
name = "sep"
version = "0.1.0"
edition = "2024"

[lib]
name = "sep_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "sep-client"
path = "src/client.rs"

[[bin]]
name = "sep-server"
path = "src/server.rs"

[[bin]]
name = "quick_test"
path = "src/quick_test.rs"

[dependencies]
bytes = { version = "1.10.1", features = ["std"] }
chacha20 = "0.9.1"
clap = { version = "4.5.40", features = ["derive"] }
console-subscriber = "0.4.1"
dashmap = "6.1.0"
derive_more = { version = "2.0.1", features = ["from"] }
futures = "0.3.31"
moro = "0.4.0"
rand = "0.9.1"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full", "test-util", "tracing"] }
tokio-test = "0.4.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }

